--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -14,3 +14,18 @@
     margin:auto;
     height:60vh;
 }
+.message{
+    background-color:grey;
+    width: 24%;
+    padding:10px;
+    margin:17px 2px;
+    border:2px solid black;
+    border-radius: 10px;
+
+}
+.left{
+
+}
+.right{
+
+}
