Your commit message here

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -20,7 +20,7 @@ body{
     margin-bottom:23px;
 }
 .message{
-    background-color:grey;
+    background-color:rgb(180,177,177);
     width: 24%;
     padding:10px;
     margin:17px 12px;
